--- a/style.css
+++ b/style.css
@@ -448,7 +448,7 @@ html {
 .contact {
     padding: 15rem;
     text-align: center;
-    background: url(images/navbar-bg.jpg);
+    background: url(navbar-bg.jpg);
     background-size: cover;
     height: 100%;
     width: 100%;
