--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ html {
  a li:hover {
     color: rgba(51,51,51,.4);;
 }
-/* end of header menu */
+/* end of header */
 
 
 /* Header*/
@@ -448,7 +448,7 @@ html {
 .contact {
     padding: 15rem;
     text-align: center;
-    background: url("navbar-bg.jpg1);
+    background: url(images/navbar-bg.jpg);
     background-size: cover;
     height: 100%;
     width: 100%;
@@ -459,7 +459,7 @@ html {
     text-transform: uppercase;
     letter-spacing: 3rem;
     color: var(--while-color);
-    text-shadow: 0 1rem 1.5rem #000;
+    text-shadow: 0 1rem 2rem #000;
     margin-bottom: 4rem;
     margin-top: 8rem;
 }
@@ -470,7 +470,7 @@ html {
     margin : auto;
     flex-direction: column;
     border-radius: .5rem;
-    box-shadow: 0 2rem 1.5rem #000;
+    box-shadow: 0 3rem 3rem #000;
     padding: 3rem;
 
 }
