--- a/style.css
+++ b/style.css
@@ -51,19 +51,6 @@ html {
     margin: 0 auto;
 
 }
-#logo {
-    height: 100%;
-    display: table;
-    float: left;
-} 
-
-#logo h4 span {
-    color: white;
-}
-#logo h4 :hover {
-    color: rgba(51,51,51,.4);
-}
-
 .nav {
     float: right;
     height: 60%;
@@ -407,7 +394,7 @@ html {
     padding: 2rem;
     margin: 5rem;
     width: 70%;
-    box-shadow: 0 2rem 1.5rem rgba(51,51,51,.4);
+    box-shadow: 0 2rem 5rem rgba(51,51,51,.4);
     transform: skew(15deg);
 
 }
@@ -444,10 +431,109 @@ html {
 }
 
 /*end of storeis*/
+/* start of contact*/
+.contact {
+    padding: 15rem;
+    text-align: center;
+    background: url(images/navbar-bg.jpg);
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+}
+.contact-heading {
+    font-size: 3rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 3rem;
+    color: var(--while-color);
+    text-shadow: 0 1rem 2rem #000;
+    margin-bottom: 4rem;
+    margin-top: 8rem;
+}
+.contact-form {
+    width: 70rem;
+    height: 30rem;
+    background-color: rgba(255,255,255,0);
+    margin : auto;
+    flex-direction: column;
+    border-radius: .5rem;
+    box-shadow: 0 3rem 3rem #000;
+    padding: 3rem;
 
+}
+.input-group {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin: 1rem;
+    position: relative;
 
+}
+.input-groups {
+    width: 100%;
+    display: flex;
+}
+.input-groups .input-group {
+    width: 48.5%;
+}
+.input-group input,
+.input-group textarea {
+    padding: 5rem 1rem 1rem 1 rem;
+    background-color:  rgba(255,255,255,0.5);
+    border: 1rem solid var(--secondary-color);
+    font-size: .7rem;
+    color: var(--light-grey-color);
+    letter-spacing: .1rem;
+    border-radius: .5rem;
 
-/* callery*/
+}
+.input-group textarea {
+    height: 7rem;
+    padding-top: 2rem;
+}
+
+.input-group input,
+.input-group textarea {
+    border: .1rem solid #ccc;
+    
+}
+
+.contact-input2  {
+    margin-left: 2rem;
+}
+.input-group label {
+    font-size: .2rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: .1rem;
+    color: var(--gry-color);
+    position: absolute;
+    top:.03rem;
+    left: 1.7rem;
+
+}
+.contact-input {
+    height: 60px;
+    width: 100%;
+
+}
+.form-btn {
+    width: 15%;
+    padding: 1rem;
+    font-size: 1rem;
+    letter-spacing: 0.1rem;
+    margin-top: .1rem;
+    background-color:rgba(255,255,255,0.6);
+    border-radius: .5rem;
+}
+
+/* end of gallery*/
+
+/* footer */
+
+/*
+* The function calc is working wrong in case calculations in the Firefox
+*/
 
 .photobox{
     display: inline-block;
@@ -997,111 +1083,9 @@ html {
     flex-wrap: wrap;
     align-items: flex-start;
   }
- 
-/*end of gallery*/
+  
+  
+  
+  
 
-/* start of contact*/
-.contact {
-    padding: 15rem;
-    text-align: center;
-    background: url("navbar-bg.jpg");
-    background-size: cover;
-    height: 100%;
-    width: 100%;
-}
-.contact-heading {
-    font-size: 3rem;
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 3rem;
-    color: var(--while-color);
-    text-shadow: 0 1rem 2rem #000;
-    margin-bottom: 4rem;
-    margin-top: 8rem;
-}
-.contact-form {
-    width: 70rem;
-    height: 30rem;
-    background-color: rgba(255,255,255,0);
-    margin : auto;
-    flex-direction: column;
-    border-radius: .5rem;
-    box-shadow: 0 3rem 3rem #000;
-    padding: 3rem;
-
-}
-.input-group {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    margin: 1rem;
-    position: relative;
-
-}
-.input-groups {
-    width: 100%;
-    display: flex;
-}
-.input-groups .input-group {
-    width: 48.5%;
-}
-.input-group input,
-.input-group textarea {
-    padding: 5rem 1rem 1rem 1 rem;
-    background-color:  rgba(255,255,255,0.5);
-    border: 1rem solid var(--secondary-color);
-    font-size: .7rem;
-    color: var(--light-grey-color);
-    letter-spacing: .1rem;
-    border-radius: .5rem;
-
-}
-.input-group textarea {
-    height: 7rem;
-    padding-top: 2rem;
-}
-
-.input-group input,
-.input-group textarea {
-    border: .1rem solid #ccc;
-    
-}
-
-.contact-input2  {
-    margin-left: 2rem;
-}
-.input-group label {
-    font-size: .2rem;
-    font-weight: 600;
-    text-transform: uppercase;
-    letter-spacing: .1rem;
-    color: var(--gry-color);
-    position: absolute;
-    top:.03rem;
-    left: 1.7rem;
-
-}
-.contact-input {
-    height: 60px;
-    width: 100%;
-
-}
-.form-btn {
-    width: 15%;
-    padding: 1rem;
-    font-size: 1rem;
-    letter-spacing: 0.1rem;
-    margin-top: .1rem;
-    background-color:rgba(255,255,255,0.6);
-    border-radius: .5rem;
-}
-
-
-
-
-
-
-
-/* end of contact*/
-
-
+/* end of gallery */
