--- a/style.css
+++ b/style.css
@@ -435,9 +435,9 @@ html {
 .contact {
     padding: 15rem;
     text-align: center;
-    background: url(images/navbar-bg.jpg);
+    background: url("navbar-bg.jpg");
     background-size: cover;
-    height: 100%;
+    height: 80%;
     width: 100%;
 }
 .contact-heading {
