--- a/style.css
+++ b/style.css
@@ -435,7 +435,7 @@ html {
 .contact {
     padding: 15rem;
     text-align: center;
-    background: url("navbar-bg.jpg");
+    background: url("https://images.pexels.com/photos/268941/pexels-photo-268941.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
     background-size: cover;
     height: 80%;
     width: 100%;
